--- a/realtime/package.json
+++ b/realtime/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "tsx watch src/index.ts",
-    "build": "tsc",
+    "dev": "npx tsx watch src/index.ts",
+    "build": "npx tsc",
     "start": "node dist/index.js",
     "docker:up": "docker compose up -d --build",
     "docker:down": "docker compose down",
