feat: integrate WebRTC video into room UI
- Add useMediasoup hook wrapping mediasoup-client SFU connection flow
- Add VideoPanel component for rendering MediaStream video elements
- Replace "LIVE VIDEO FEED" placeholder with real video grid
- Show video for all participants (not just debaters)
- Add mute/camera toggle controls
- Pass currentUsername from server to client component
- Install mediasoup-client and socket.io-client dependencies
- Add NEXT_PUBLIC_SFU_URL to .env.example

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,6 @@ DATABASE_URL="postgresql://postgres:YOUR_PASSWORD@db.YOUR_PROJECT.supabase.co:54
 # Supabase Auth
 NEXT_PUBLIC_SUPABASE_URL="https://YOUR_PROJECT.supabase.co"
 NEXT_PUBLIC_SUPABASE_ANON_KEY="your-anon-key"
+
+# SFU (WebRTC media server)
+NEXT_PUBLIC_SFU_URL="http://localhost:3001"
