--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "dotenv": "^17.2.3",
     "framer-motion": "^12.29.2",
     "lucide-react": "^0.563.0",
+    "mediasoup-client": "^3.18.6",
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "socket.io-client": "^4.8.3",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
